# devtools

./: .gitignore  API_BAR_RAISING.md  CONTRIBUTING.md  README.md  diff.txt
.github/workflows/: check-markdown-links.yml  community-dashboard.yaml
authorization-check/: README.md  action.yml
authorization-check/scripts/: check-authorization.cjs
cdk-evals/: .env.example  .gitignore  README.md  cdk.json  package.json  tsconfig.json
cdk-evals/dashboard/: .gitignore  README.md  package.json  vite.config.ts
cdk-evals/lib/: dashboard-stack.ts  eval-pipeline-stack.ts
changelog-release-pr/: README.md  action.yml
changelog-release-pr/scripts/: build-release-file.cjs  build-release-file.test.cjs  derive-entries.cjs  derive-entries.test.cjs  enrich.cjs  enrich.test.cjs  parse-release-body.cjs  parse-release-body.test.cjs  render-markdown.cjs  render-markdown.test.cjs  run-action.cjs  run-action.test.cjs  run.cjs  run.test.cjs  semver-compare.cjs  semver-compare.test.cjs
community-dashboard/: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yaml
issue-labeler/: classify.py  test_classify.py
scripts/: strands_release_helper.py
strands-command/: README.md
strands-command/scripts/python/: agent_runner.py  beta_agent_runner.py  github_tools.py  orchestrator.py  pyproject.toml  requirements.txt  shell_tool.py  write_executor.py
strands-command/scripts/python/tests/: test_github_tools.py  test_shell_tool.py
strands-command/scripts/python/tests/integ/: test_shell_tool.py
strands-grafana/: .gitignore  README.md  docker-compose.yaml
(+108 files in other folders)
